month tab completed

--- a/main.html
+++ b/main.html
@@ -135,7 +135,7 @@
       
       <div class="view">
 
-        <div class="yearContents">
+        <div class="yearContents" id="content">
           <h2 class="currentYear"></h2>
           <div class="monthCont">
             <div class="month"></div>
@@ -153,49 +153,21 @@
           </div>
         </div>
 
-        <div class="monthContents">
+        <div class="monthContents" id="content">
           <h2 class="currentMonth"></h2>
-          <div class="daysCont">
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-
-            <div class="day"></div>
-            <div class="day"></div>
-
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-
-                        <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-
-            <div class="day"></div>
-
+            <div class="week">
+              <h4 class="weekDay">Sun.</h4>
+              <h4 class="weekDay">Mon.</h4>
+              <h4 class="weekDay">Tu.</h4>
+              <h4 class="weekDay">Wed.</h4>
+              <h4 class="weekDay">Thu.</h4>
+              <h4 class="weekDay">Fri.</h4>
+              <h4 class="weekDay">Sat.</h4>
+            </div>
+          <div class="daysCont"></div>
+          <div class="cdpCont">
+            <div class="currentDayProgress"></div>
+            <h2 class="dn"></h2>
           </div>
         </div>
 
