day tab completed

--- a/main.html
+++ b/main.html
@@ -171,8 +171,12 @@
           </div>
         </div>
 
-        <div class="dayContents">
-
+        <div class="dayContents" id="content">
+          <h2 class="currentDay"></h2>
+          <div class="cycle">
+            <div class="sun"></div>
+            <h2 class="tm"></h2>
+          </div>
         </div>
 
       </div>
