--- a/start.html
+++ b/start.html
@@ -110,10 +110,23 @@
           <button class="year">2025</button>
         </div>
 
-        <div class="monthes"></div>
+        <div class="monthes">
+          <button class="month">January</button>
+          <button class="month">January</button>
+          <button class="month">January</button>
+          <button class="month">January</button>
+          <button class="month">January</button>
+          <button class="month">January</button>
+          <button class="month">January</button>
+          <button class="month">January</button>
+          <button class="month">January</button>
+          <button class="month">January</button>
+          <button class="month">January</button>
+          <button class="month">January</button>
+        </div>
 
-        <div class="days"></div>
       </div>
+
       <h4>scroll down</h4>
       <button class="apply">Apply</button>
     </div>
