--- a/start.html
+++ b/start.html
@@ -110,7 +110,7 @@
           <button class="year">2025</button>
         </div>
 
-        <div class="monthes">
+        <!-- <div class="monthes">
           <button class="month">January</button>
           <button class="month">January</button>
           <button class="month">January</button>
@@ -123,7 +123,7 @@
           <button class="month">January</button>
           <button class="month">January</button>
           <button class="month">January</button>
-        </div>
+        </div> -->
 
       </div>
 
